[project]
name = "reflection-reasearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.15",
    "langchain-core>=0.3.65",
    "langchain-openai>=0.3.22",
    "langgraph>=0.4.8",
    "langgraph-cli[inmem]>=0.3.1",
    "numpy>=2.3.0",
    "tavily-python>=0.7.5",
]
